[package]
name = "ress"
version = "0.7.0-beta.1"
authors = ["Robert Masen <r@robertmasen.pizza>"]
description = "A sanner/tokenizer for JS files"
keywords = ["JavaScript", "parsing", "JS", "ES", "ECMA"]
categories = ["parsing", "text-processing", "web-programming"]
license = "MIT"
repository = "https://github.com/freemasen/ress"
readme = "./README.md"
edition = "2018"

[badges]
travis-ci = { repository = "FreeMasen/RESS", branch = "master" }
appveyor = { repository = "FreeMasen/RESS", branch = "master", service = "github" }

[dependencies]
log = "0.4"
unic-ucd-ident = { version = "0.9", features = ["id"] }
unic-ucd-category = "0.9"
flate2 = { version = "1", optional = true }
reqwest = { version = "0.9", optional = true }
tar = { version = "0.4", optional = true}
lazy_static = "1"

[dev-dependencies]
docopt = "1.0"
serde = "1.0"
serde_derive = "1.0"
proptest = "0.8"
walkdir = "2.2"
pretty_env_logger = "0.2"
regex_generate = "0.2.0"

[features]
default = []
moz_central = ["flate2", "reqwest", "tar"]

[[example]]
name = "major_libs"
path = "examples/major_libs/src/main.rs"

[[example]]
name = "clear-comments"
path = "examples/clear-comments/src/main.rs"

[[example]]
name = "semi_finder"
path = "examples/semi_finder/src/main.rs"