[package]
name = "ress"
version = "0.7.0-beta.5"
authors = ["Robert Masen <r@robertmasen.pizza>"]
description = "A sanner/tokenizer for JS files"
keywords = ["JavaScript", "parsing", "JS", "ES", "ECMA"]
categories = ["parsing", "text-processing", "web-programming"]
license = "MIT"
repository = "https://github.com/freemasen/ress"
readme = "./README.md"
edition = "2018"

[badges]
travis-ci = { repository = "FreeMasen/RESS", branch = "master" }
appveyor = { repository = "FreeMasen/RESS", branch = "master", service = "github" }

[dependencies]
log = "0.4"
unic-ucd-ident = { version = "0.9", features = ["id"] }
unic-ucd-category = "0.9"
flate2 = { version = "1", optional = true }
reqwest = { version = "0.9", optional = true }
tar = { version = "0.4", optional = true}

[dev-dependencies]
docopt = "1.0"
serde = "1.0"
serde_derive = "1.0"
proptest = "0.8"
walkdir = "2.2"
pretty_env_logger = "0.2"
regex_generate = "0.2.0"
criterion = "0.2"
lazy_static = "1"

[features]
default = []
moz_central = ["flate2", "reqwest", "tar"]

[[example]]
name = "major_libs"
path = "examples/major_libs/src/main.rs"

[[example]]
name = "clear-comments"
path = "examples/clear-comments/src/main.rs"

[[example]]
name = "semi_finder"
path = "examples/semi_finder/src/main.rs"

#instrument's examples
[[example]]
name = "keywords"
path = "examples/instruments/keywords.rs"
[[example]]
name = "puncts"
path = "examples/instruments/puncts.rs"
[[example]]
name = "idents"
path = "examples/instruments/idents.rs"
[[example]]
name = "strings"
path = "examples/instruments/strings.rs"
[[example]]
name = "templates"
path = "examples/instruments/templates.rs"
[[example]]
name = "regexes"
path = "examples/instruments/regexes.rs"
[[example]]
name = "numbers"
path = "examples/instruments/numbers.rs"
[[example]]
name = "bools"
path = "examples/instruments/bools.rs"
[[example]]
name = "null"
path = "examples/instruments/null.rs"
[[example]]
name = "comments"
path = "examples/instruments/comments.rs"

[[bench]]
name = "major_libs"
harness = false

[[bench]]
name = "ref_perf_vs"
harness = false