[package]
name = "ress"
version = "0.11.4"
authors = ["Robert Masen <r@robertmasen.pizza>"]
description = "A scanner/tokenizer for JS files"
keywords = ["JavaScript", "parsing", "JS", "ES", "ECMA"]
categories = ["parsing", "text-processing", "web-programming"]
license = "MIT"
repository = "https://github.com/rusty-ecma/ress"
readme = "./README.md"
edition = "2018"

[dependencies]
log = "0.4"
unicode-xid = "0.2"

[dev-dependencies]
walkdir = "2"
docopt = "1"
serde = "1"
serde_derive = "1"
proptest = "0.10"
pretty_env_logger = "0.4"
regex_generate = "0.2"
criterion = "0.3"
lazy_static = "1"
res-regex = "0.1"

[features]
default = []
moz_central = []

[[example]]
name = "major_libs"
path = "examples/major_libs/src/main.rs"

[[example]]
name = "clear-comments"
path = "examples/clear-comments/src/main.rs"

[[example]]
name = "semi_finder"
path = "examples/semi_finder/src/main.rs"

#instrument's examples
[[example]]
name = "keywords"
path = "examples/instruments/keywords.rs"
[[example]]
name = "puncts"
path = "examples/instruments/puncts.rs"
[[example]]
name = "idents"
path = "examples/instruments/idents.rs"
[[example]]
name = "strings"
path = "examples/instruments/strings.rs"
[[example]]
name = "templates"
path = "examples/instruments/templates.rs"
[[example]]
name = "regexes"
path = "examples/instruments/regexes.rs"
[[example]]
name = "numbers"
path = "examples/instruments/numbers.rs"
[[example]]
name = "bools"
path = "examples/instruments/bools.rs"
[[example]]
name = "null"
path = "examples/instruments/null.rs"
[[example]]
name = "comments"
path = "examples/instruments/comments.rs"

[[bench]]
name = "major_libs"
harness = false

[[bench]]
name = "ref_perf_vs"
harness = false

[[bench]]
name = "chars_vs_jsbuffer"
harness = false
